<resources>
    <string name="app_name">Lifc Visitors</string>
    <string name="title_activity_employeeregistration">employee registration</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="pref_file">com.laxmi.lifcvisitors.preference_file</string>
    <string name="pref_login_status">com.laxmi.lifcvisitors.preference_login_status</string>
    <string name="pref_username">com.laxmi.lifcvisitors.preference_user_name</string>
    <string name="pref_image">com.laxmi.lifcvisitors.preference_image</string>
    <string name="pref_token">com.laxmi.lifcvisitors.preference_token</string>
    <string name="pref_email">com.laxmi.lifcvisitors.preference_email</string>
    <string name="pref_login_id">com.laxmi.lifcvisitors.preference_login_id</string>
    <string name="pref_type">com.laxmi.lifcvisitors.preference_type</string>
    <string name="pref_pic">com.laxmi.lifcvisitors.preference_pic</string>
    <string name="pref_phone">com.laxmi.lifcvisitors.preference_phone</string>
    <string name="pref_deviceId">com.laxmi.lifcvisitors.preference_deviceId</string>
    <string name="pref_services">com.laxmi.lifcvisitors.preference_service</string>
    <string name="register_text">Don\'t have an Account ? Create One !</string>
    <string name="your_string_here"><![CDATA[<u>Don\'t have an Account ? Create One !</u>.]]></string>
    <string name="marquee_text">                                                                    Laxmi India Finance Private Limited (Formerly Known as Laxmi India Finleasecap Private Limited)</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm">Confirm</string>
    <string name="floor">Floor</string>
    <string name="conferenceroom_cabin">ConferenceRoom/Cabin</string>
    <string name="login">Login</string>
    <string name="mobile_no_emp_code">Mobile number </string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="change_password">Change Password</string>
    <string name="get_otp">Get Otp</string>
    <string name="content">Password must be of 8 character including \n 1. Number 2. Special character and 3. Alphabets  </string>
    <string name="Confirm">Confirm</string>
    <string name="visitors">Visitors</string>
    <string name="total_visitor_count">Total Visitor Count</string>
    <string name="new_visitor">New Visitor</string>
    <string name="my_profile">My Profile</string>
    <string name="request_pending">Request Pending</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="verify">Verify</string>
    <string name="sign_up">SIGN UP</string>
    <string name="empcode">Employee Code</string>
    <string name="already_have_an_account_login">Already have an account ? Login !</string>
    <string name="welcome_to_visitors">Welcome to Visitors</string>
    <string name="how_can_i_help_you">How can i help you?</string>
    <string name="who_are_you">Who are you ?</string>
    <string name="guard">Guard</string>
    <string name="employee">Employee</string>
    <string name="_2_dfl_tower_gopinath_marg_m_i_road_jaipur_302001">2,DFL Tower Gopinath Marg M.I.Road,Jaipur -302001</string>
    <string name="purpose_of_meeting">Purpose of Meeting</string>
    <string name="visitor_photo">Visitor Photo</string>
    <string name="upload">Upload</string>
    <string name="pincode">Pincode</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="whom_to_meet">Whom To Meet</string>
    <string name="employee_name">Employee Name</string>
    <string name="employee_id">Employee Code</string>
    <string name="branch">Branch</string>
    <string name="department">Department</string>
    <string name="send_request">Send Request</string>
    <string name="request">Request</string>
    <string name="office_boy_name">Office Boy Name</string>
    <string name="employeecode">EmployeeCode</string>
    <string name="submit">Submit</string>
    <string name="enter_your_otp">Enter Your Otp</string>
    <string name="second_visitor_name">Second Visitor Name</string>
    <string name="third_visitor_name">Third Visitor Name</string>
    <string name="conference_room">Conference Room</string>
    <string name="approve">Approve</string>
    <string name="disapprove">Disapprove</string>
    <string name="total_visitor_status">Total Visitor Status</string>
    <string name="welcome_to_lifc">WELCOME TO LIFC</string>
    <string name="feedback_from_visitor">Feedback from Visitor</string>
    <string name="visitor_detail">Visitor Detail</string>
    <string name="visitor_name">Visitor Name</string>
    <string name="visitor_name_one">Visitor Name One</string>
    <string name="visitor_name_two">Visitor Name Two</string>
    <string name="visitor_name_three">Visitor Name Three</string>
    <string name="getotp">Getotp</string>
    <string name="select_your_city">Select Your city</string>
    <string name="time_in">Time In</string>
    <string name="select_in_time">SELECT IN TIME</string>
    <string name="name">Name</string>
    <string name="contact_us">Contact Us</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="employee_create_password">Employee Create Password</string>
    <string name="create_password">Create Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="select_your_state">Select Your State</string>
    <string name="enter_mobile_no">Enter Mobile Number</string>
    <string name="employee_login">Employee Login</string>
    <string name="profile">Profile</string>
    <string name="contactus">Contactus</string>
    <string name="call_for_help">Call for help:</string>
    <string name="employee_code">Employee Code</string>
    <string name="whom_to_meets">Whom To Meet</string>
    <string name="employee_profile_update">Employee Profile Update</string>
    <string name="employee_send_request_to_guard">Employee Send Request To Guard</string>
    <string name="visitors_list">Visitors List</string>
    <string name="recreate_password">Recreate Password</string>
    <string name="guard_login">Guard Login</string>
    <string name="guard_send_request_to_employee">Guard Send Request To employee</string>
    <string name="office_boy_assign">Office Boy Assign</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="employee_response">Employee Response</string>
    <string name="enter_name">Enter Name</string>
    <string name="email">Email</string>
    <string name="role">Role</string>
    <string name="update">Update</string>
    <string name="co_visitor">Co Visitor</string>
    <string name="Select_Purpose_Of_Meeting">Select Purpose Of Meeting</string>
    <string name="Auditor">Auditor</string>
    <string name="Advisor">Advisor</string>
    <string name="Emi">EMI</string>
    <string name="Forclosure">Foreclosure</string>
    <string name="Interview">Interview</string>
    <string name="Investor">Investor</string>
    <string name="Insurance">Insurance</string>
    <string name="Loan_Enquiry">Loan Enquiry</string>
    <string name="Lender">Lender</string>
    <string name="Noc">NOC</string>
    <string name="Settlement">Settlement</string>
    <string name="Other_branch_employee">Other Branch Employee</string>
    <string name="Vendor">Vendor</string>
    <string name="Personal_meeting">Personal Meeting</string>
    <string name="Other">Other</string>
    <string name="visitor_status">Visitor Status</string>
    <string name="feedback">FeedBack</string>


</resources>