<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/reds">

                <ImageView
                    android:id="@+id/btn_save"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_baseline_arrow_back_ios_24"
                    app:tint="@color/white"/>
                <TextView
                    android:id="@+id/tv_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="20dp"
                    android:text="Guard Profile Update"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    android:typeface="sans" />
            </androidx.appcompat.widget.Toolbar>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_gravity="center"
                android:layout_width="90dp"
                android:layout_height="88dp"
                android:src="@drawable/profile_photo"
                app:civ_border_color="#FF000000"
                android:layout_marginTop="20dp"
                android:paddingRight="10dp"
                app:civ_border_width="2dp"/>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ev_enter_name"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/enter_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ev_department"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/department" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ev_email"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ev_mobile_no"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/mobile_number"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ev_role"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/role"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:singleLine="true"
                android:text="@string/update"
                android:textColor="@color/white" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>