<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.employee.Employeeotpverification">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/lifc_logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/mywidget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:fadingEdge="horizontal"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:textColor="#ff4500"
                android:text="@string/marquee_text"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/elipse_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ellipse_1" />

            <ImageView
                android:id="@+id/elipse_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ellipse_2" />

            <ImageView
                android:id="@+id/logo_3"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_below="@id/elipse_1"
                android:layout_centerInParent="true"
                android:src="@drawable/life_logo" />
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="20dp"
            android:text="@string/otp_verification"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_enter_your_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_otp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/kaithik"
            android:textAlignment="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <EditText
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/otp_box"
                android:maxLength="1" />

            <EditText
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/otp_box"
                android:maxLength="1" />

            <EditText
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/otp_box"
                android:maxLength="1" />

            <EditText
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/otp_box"
                android:maxLength="1" />
        </LinearLayout>
        <TextView
            android:id="@+id/tv_getotp"
            android:layout_width="202dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:background="@drawable/btn_bg_rectangle"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="@string/get_otp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="10dp"/>

    </LinearLayout>
</ScrollView>