<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.employee.EmployeeDashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff4500">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Employee Dashboard"
                android:gravity="center"
                android:textColor="@color/white" />

        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:id="@+id/lifc_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/mywidget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:ellipsize="marquee"
                android:fadingEdge="horizontal"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/marquee_text"
                android:textColor="#ff4500"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/elipse_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ellipse_1" />

            <ImageView
                android:id="@+id/elipse_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ellipse_2" />

            <ImageView
                android:id="@+id/logo_3"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_below="@id/elipse_1"
                android:layout_centerInParent="true"
                android:src="@drawable/life_logo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo_3"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:text="@string/visitors"
                android:textColor="@color/red"
                android:textSize="24sp"
                android:textStyle="bold" />
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/rl_vistorcount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">
            <TextView
                android:id="@+id/total_visitor_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg_rectangle"
                android:padding="15dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginEnd="5dp"
                android:text="@string/total_visitor_status"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/new_Visitor_employee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg_rectangle"
                android:padding="15dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/new_visitor"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"/>

           <!-- <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp">

                <TextView
                    android:id="@+id/my_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/btn_bg_rectangle"
                    android:padding="10dp"
                    android:text="My Profile                "
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/request_pending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_toRightOf="@id/my_profile"
                    android:background="@drawable/btn_bg_rectangle"
                    android:padding="10dp"
                    android:text="Request Pending"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </RelativeLayout>-->


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg_rectangle"
                android:padding="15dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginEnd="5dp"
                android:text="@string/my_profile"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg_rectangle"
                android:padding="15dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/request_pending"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!-- <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="35dp">

                 <TextView
                     android:id="@+id/my_profile"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:background="@drawable/btn_bg_rectangle"
                     android:padding="10dp"
                     android:text="My Profile                "
                     android:textColor="@color/white"
                     android:textSize="22sp"
                     android:textStyle="bold" />

                 <TextView
                     android:id="@+id/request_pending"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="30dp"
                     android:layout_marginTop="20dp"
                     android:layout_toRightOf="@id/my_profile"
                     android:background="@drawable/btn_bg_rectangle"
                     android:padding="10dp"
                     android:text="Request Pending"
                     android:textColor="@color/white"
                     android:textSize="22sp"
                     android:textStyle="bold" />
             </RelativeLayout>-->


        </LinearLayout>

    </LinearLayout>
</ScrollView>