<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.employee.EmpcreatepswActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff4500">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Employee Create Password"
                android:gravity="center"
                android:textColor="@color/white" />

        </androidx.appcompat.widget.Toolbar>
    <RelativeLayout
        android:id="@+id/lifc_logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/mywidget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:textColor="#ff4500"
            android:text="@string/marquee_text"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/elipse_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ellipse_1" />

        <ImageView
            android:id="@+id/elipse_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ellipse_2" />

        <ImageView
            android:id="@+id/logo_3"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_below="@id/elipse_1"
            android:layout_centerInParent="true"
            android:src="@drawable/life_logo" />
    </RelativeLayout>
   <!-- <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        android:text="New Password"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />-->

   <!-- <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/bgtext"
        android:layout_toRightOf="@+id/tv_emp_name"
        android:singleLine="true"
        android:padding="10dp" />-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newpswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="10dp"
                android:maxLength="16"
                android:layout_margin="10dp"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobile_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:inputType="textPassword"
                android:maxLength="10"
                android:layout_margin="10dp"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>


      <!--  <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        android:text="Confirm Password"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />-->

   <!-- <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/bgtext"
        android:layout_toRightOf="@+id/tv_emp_name"
        android:singleLine="true"
        android:padding="10dp" />
-->    <TextView
        android:id="@+id/tv_confirmpsw"
        android:layout_width="222dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/btn_bg_rectangle"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="@string/confirm"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="14sp" />
    </LinearLayout>

</ScrollView>